[gd_scene load_steps=5 format=2]

[ext_resource path="res://menu/menu.gd" type="Script" id=1]
[ext_resource path="res://menu/logo.png" type="Texture" id=2]
[ext_resource path="res://fonts/dubious_theme.tres" type="Theme" id=3]
[ext_resource path="res://menu/bg.png" type="Texture" id=4]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="Logo2" type="Sprite" parent="."]
position = Vector2( 683.28, 497.859 )
scale = Vector2( 1.5979, 1.5979 )
texture = ExtResource( 4 )
offset = Vector2( -106, -192 )

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 610, 276 )
scale = Vector2( 0.805355, 0.805355 )
texture = ExtResource( 2 )
offset = Vector2( -106, -192 )

[node name="Button" type="Button" parent="."]
margin_left = 715.0
margin_top = 525.0
margin_right = 1000.0
margin_bottom = 591.0
text = "PLAY"

[node name="DebugLevelText" type="TextEdit" parent="."]
margin_top = 18.0
margin_right = 156.0
margin_bottom = 58.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 1.0
margin_top = 38.0
margin_right = 423.0
margin_bottom = 418.0
rect_scale = Vector2( 0.4, 0.4 )

[node name="Label2" type="Label" parent="."]
margin_left = 16.0
margin_top = -3.0
margin_right = 95.0
margin_bottom = 36.0
rect_scale = Vector2( 0.5, 0.5 )
text = "debug"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="text_changed" from="DebugLevelText" to="." method="_on_TextEdit_text_changed"]
